--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ body{
     background-attachment: fixed;
     background-size: 100% 100%;
 }
-nav{
+#logo-titulo{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+#navegador{
     display:flex ;
     align-items: center;
     justify-content: space-between;
@@ -19,7 +24,9 @@ nav{
     background-color: black;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-
+}
+#Skull{
+    width: 110px;
 }
 h1{
     color: white;
@@ -28,6 +35,11 @@ h1{
     padding-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+h2{
+    font-size: 35px;
+}
+
 ul li{
     display: inline-block; 
     padding: 0px 20px;
@@ -39,6 +51,9 @@ a{
     margin-bottom: 20px;
     
 }
+.link-texto{
+    text-decoration: underline;
+}
 
 a:hover{
     color:orange ;
@@ -46,8 +61,35 @@ a:hover{
 
 #cuerpo{ 
     text-align: center;
+    text-decoration: none;
     margin: 50px;
-    background-color: rgba(205, 205, 205, 0.8);
-    font-size: 25px;
+    background-color: rgba(235, 167, 79, 0.5);
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    border: 5px;
+    border-radius: 10px;
+    padding-left: 20px ;
+    padding-right: 20px ;
+}
+
+#titulo-texto{
+    color: rgb(255, 255, 255);
+}
+
+#ejemplos{
+    justify-content: center;
+    
+}
+ 
+.ej{
+    width: 600px;
+    height: 400px;
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+h2{
+    color: rgb(255, 255, 255);
 }
